[package]
name = "libav-sys"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.64.0"
#system-deps = "6.0.3"

#[package.metadata.system-deps]
#libavcodec = "58"
#libavformat = "58"
#libavfilter = "7.40.101"
#libavresample = "4.0.0"
#libswresample = "3.3.100"